--- a/src/all.css
+++ b/src/all.css
@@ -2,3 +2,8 @@
 @import "./panels.css";
 @import "./themes.css";
 @import "./tooltip.css";
+
+@import "./backgrounds.min.css";
+@import "./panels.min.css";
+@import "./themes.min.css";
+@import "./tooltip.min.css";
