--- a/src/panels.css
+++ b/src/panels.css
@@ -14,14 +14,14 @@
   border: 1px solid currentColor;
   text-decoration: none;
   transition-property: box-shadow, transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 75ms;
   cursor: pointer;
   font-size: 16px;
-  box-shadow: currentColor var(--shadow) var(--shadow);
+  box-shadow: var(--shadow) var(--shadow) currentColor;
 
   &:is(:active, .pressed, .loading) {
-    transition-property: transform, box-shadow;
-    box-shadow: currentColor 0px 0px;
+    box-shadow: 0px 0px currentColor;
   }
 
   &:is(.loading, .pressed) {
@@ -60,7 +60,7 @@
 
 :not(button, a, .button).yuzui {
   border: 1px solid currentColor;
-  box-shadow: currentColor var(--shadow) var(--shadow);
+  box-shadow: var(--shadow) var(--shadow) currentColor;
 
   &:not(.flush) {
     transform: translate(calc(-1 * var(--shadow)), calc(-1 * var(--shadow)));
