--- a/src/panels.css
+++ b/src/panels.css
@@ -5,6 +5,10 @@
 }
 
 :is(button, a, .button).yuzui {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
   position: relative;
   display: flex;
   align-items: center;
