--- a/src/panels.css
+++ b/src/panels.css
@@ -2,16 +2,13 @@
   --shadow: var(--shadow-size, 4px);
   background: var(--background-color, white);
   color: var(--text-color, currentColor);
-  -webkit-text-size-adjust: 100%;
+}
+
+html {
+  -webkit-tap-highlight-color: transparent; // Needed for mobile safari
 }
 
 :is(button, a, .button).yuzui {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
-
   position: relative;
   display: flex;
   align-items: center;
@@ -19,12 +16,10 @@
   padding: 6px 32px;
   font-weight: 500;
   border: 1px solid currentColor;
-  text-decoration: none;
   transition-property: box-shadow, transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 75ms;
   cursor: pointer;
-  font-size: 16px;
   box-shadow: var(--shadow) var(--shadow) currentColor;
 
   &:is(:active, .pressed, .loading) {
