--- a/src/panels.css
+++ b/src/panels.css
@@ -15,6 +15,7 @@ html {
   justify-content: center;
   padding: 6px 32px;
   font-weight: 500;
+  font-size: 16px;
   border: 1px solid currentColor;
   transition-property: box-shadow, transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
