--- a/src/panels.css
+++ b/src/panels.css
@@ -29,23 +29,20 @@ html {
   transition-duration: 75ms;
   cursor: pointer;
   font-size: 16px;
-  box-shadow: var(--shadow) var(--shadow) currentColor;
   background-image: none;
+  opacity: 100%;
+
+  box-shadow: var(--shadow) var(--shadow) currentColor;
+  transform: translate(calc(-1 * var(--shadow)), calc(-1 * var(--shadow)));
 
   &:is(:active, .pressed, .loading) {
     box-shadow: 0px 0px currentColor;
+    transform: translate(0, 0);
+    opacity: 100%;
   }
 
   &:is(.loading, .pressed) {
     pointer-events: none;
-  }
-
-  &:not(.flush) {
-    transform: translate(calc(-1 * var(--shadow)), calc(-1 * var(--shadow)));
-  }
-
-  &:not(.flush):is(:active, .pressed, .loading) {
-    transform: translate(0);
   }
 
   &.flush {
