--- a/src/panels.css
+++ b/src/panels.css
@@ -7,7 +7,7 @@
 
 :is(button, a, .button).yuzui {
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 
   position: relative;
   display: flex;
