--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -1,6 +1,6 @@
 [data-tooltip] {
-  --text: var(--text-color, black);
-  --background: var(--background-color, white);
+  --text-color: hsl(var(--yuzui-primary));
+  --background-color: hsl(var(--yuzui-light));
 }
 
 [data-tooltip]:hover {
@@ -10,8 +10,8 @@
 
 [data-tooltip]:hover::before {
   text-decoration: none;
-  background: var(--text);
-  color: var(--background);
+  background: var(--text-color, black);
+  color: var(--background-color, white);
   font-size: 12px;
   pointer-events: none;
   position: absolute;
@@ -30,7 +30,7 @@
   position: absolute;
   z-index: 99999;
   font-size: 10px;
-  color: var(--text);
+  color: var(--text-color, black);
 }
 
 [data-tooltip]:hover::before,
