--- a/src/panels.css
+++ b/src/panels.css
@@ -25,8 +25,10 @@
   text-decoration: none;
 
   -webkit-transition-property: box-shadow, transform;
+  -webkit-transition-timing-function: linear;
   -webkit-transition-duration: 75ms;
   transition-property: box-shadow, transform;
+  transition-timing-function: linear;
   transition-duration: 75ms;
 
   cursor: pointer;
