--- a/src/panels.css
+++ b/src/panels.css
@@ -14,6 +14,8 @@
 :is(button, a, .button).yuzui {
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
+  appearance: none;
+  text-transform: none;
 
   position: relative;
   display: flex;
