--- a/src/themes.css
+++ b/src/themes.css
@@ -26,16 +26,41 @@
   --yuzui-panel: 0 0% 15%;
 }
 
-.yuzui-theme-selection ::-moz-selection {
+.yuzui-theme ::-moz-selection {
   --accent-color: hsl(var(--yuzui-accent));
   --light-color: hsl(var(--yuzui-light));
   color: var(--light-color);
   background-color: var(--accent-color);
 }
 
-.yuzui-theme-selection ::selection {
+.yuzui-theme ::selection {
   --accent-color: hsl(var(--yuzui-accent));
   --light-color: hsl(var(--yuzui-light));
   color: var(--light-color);
   background-color: var(--accent-color);
+}
+
+.yuzui-theme *,
+.yuzui-theme :before,
+.yuzui-theme :after {
+  border-color: hsl(var(--yuzui-primary) / 0.1);
+}
+
+.yuzui-fadein {
+  animation-name: yuzui-fadein;
+  animation-duration: 0.55s;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-fill-mode: none;
+}
+
+@keyframes yuzui-fadein {
+  0% {
+    opacity: 0;
+    transform: translate3d(0, 10px, 0);
+  }
+
+  100% {
+    opacity: 100;
+    transform: translate3d(0, 0, 0);
+  }
 }
