--- a/src/panels.css
+++ b/src/panels.css
@@ -11,20 +11,13 @@
 :is(button, a, .button).yuzui {
   background-color: var(--background-color, transparent);
   color: var(--text-color, currentColor);
+  border: 1px solid var(--panel);
 
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   appearance: none;
-  text-transform: none;
 
   position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 6px 32px;
-  font-weight: 500;
-  border: 1px solid var(--panel);
-  text-decoration: none;
 
   -webkit-transition-property: box-shadow, transform;
   -webkit-transition-timing-function: linear;
@@ -35,10 +28,20 @@
 
   cursor: pointer;
   opacity: 100%;
-  font-size: 16px;
 
   box-shadow: var(--shadow) var(--shadow) var(--panel);
   transform: translate3d(calc(-1 * var(--shadow)), calc(-1 * var(--shadow)), 0);
+
+  &:not(:has(div)) {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 500;
+    text-transform: none;
+    padding: 6px 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   &:is(:active, .pressed, .loading) {
     box-shadow: 0px 0px var(--panel);
@@ -143,6 +146,11 @@ div:has:only(> .yuzui) {
 
 .yuzui-column:has(:is(button, a, .button).yuzui) ~ * {
   z-index: 1;
+}
+
+.yuzui.yuzui-column {
+  overflow-y: auto;
+  border: 0;
 }
 
 .yuzui-row:has(:is(button, a, .button).yuzui) ~ * {
