--- a/src/panels.css
+++ b/src/panels.css
@@ -36,7 +36,6 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
-    text-transform: none;
     padding: 6px 32px;
     display: flex;
     align-items: center;
@@ -136,8 +135,8 @@
   display: grid;
 }
 
-.yuzui-column > * {
-  margin-bottom: -1px;
+.yuzui-column > *:not(:first-child) {
+  margin-top: -1px;
 }
 
 .yuzui-column:has(:is(button, a, .button).yuzui) ~ * {
@@ -147,7 +146,7 @@
 .yuzui.yuzui-column:has(> .yuzui) {
   overflow-y: auto;
   border: 0 !important;
-  background-color: none !important;
+  background-color: transparent !important;
 }
 
 .yuzui-row:has(:is(button, a, .button).yuzui) ~ * {
