--- a/src/themes.css
+++ b/src/themes.css
@@ -49,7 +49,7 @@
 .yuzui-theme *,
 .yuzui-theme :before,
 .yuzui-theme :after {
-  --panel-color: hsl(var(--yuzui-panel));
+  /* --panel-color: hsl(var(--yuzui-panel)); */
   --light-text-color: hsl(var(--yuzui-primary) / 0.1);
   border-color: var(--panel-color, var(--light-text-color));
 }
