--- a/src/panels.css
+++ b/src/panels.css
@@ -6,13 +6,23 @@
 
   --background-color: hsl(var(--yuzui-light));
   --text-color: hsl(var(--yuzui-primary));
+
+  background-color: var(--background-color, transparent);
+  color: var(--text-color, currentColor);
+  transform: translate3d(calc(-1 * var(--shadow)), calc(-1 * var(--shadow)), 0);
+  border: 1px solid var(--panel);
+  box-shadow: var(--shadow) var(--shadow) var(--panel);
+
+  &:is(button, a, .button):active,
+  &:is(.pressed, .loading) {
+    box-shadow: 0px 0px var(--panel);
+    transform: translate3d(0, 0, 0);
+    opacity: 100%;
+    pointer-events: none;
+  }
 }
 
 :is(button, a, .button).yuzui {
-  background-color: var(--background-color, transparent);
-  color: var(--text-color, currentColor);
-  border: 1px solid var(--panel);
-
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   appearance: none;
@@ -29,9 +39,6 @@
   cursor: pointer;
   opacity: 100%;
 
-  box-shadow: var(--shadow) var(--shadow) var(--panel);
-  transform: translate3d(calc(-1 * var(--shadow)), calc(-1 * var(--shadow)), 0);
-
   &:focus-visible {
     color: hsl(var(--yuzui-accent, 217 82% 50%));
     outline: none;
@@ -47,28 +54,10 @@
     justify-content: center;
   }
 
-  &:is(:active, .pressed, .loading) {
-    box-shadow: 0px 0px var(--panel);
-    transform: translate3d(0, 0, 0);
-    opacity: 100%;
-  }
-
-  &:is(.loading, .pressed) {
-    pointer-events: none;
-  }
-
   &:disabled {
     color: hsl(var(--yuzui-primary) / 0.5);
     pointer-events: none;
     cursor: not-allowed;
-  }
-
-  &.flush {
-    transform: translate3d(0, 0, 0);
-  }
-
-  &.flush:is(:active, .pressed, .loading) {
-    transform: translate3d(var(--shadow), var(--shadow), 0);
   }
 
   &.loading::after {
@@ -85,22 +74,7 @@
   }
 }
 
-:not(button, a, .button).yuzui {
-  border: 1px solid var(--panel);
-  box-shadow: var(--shadow) var(--shadow) var(--panel);
-  background-color: var(--background-color, transparent);
-  color: var(--text-color, currentColor);
-
-  &:not(.flush) {
-    transform: translate3d(
-      calc(-1 * var(--shadow)),
-      calc(-1 * var(--shadow)),
-      0
-    );
-  }
-}
-
-:not(button, a, .button).yuzui > :is(input, textarea):only-child {
+.yuzui > :is(input, textarea):only-child {
   color: var(--text-color, currentColor);
   background: none !important;
   border: none !important;
@@ -110,37 +84,28 @@
   display: inline-block;
 }
 
-.all-flush .yuzui {
-  transform: translate3d(0, 0, 0) !important;
-}
+.all-flush.yuzui,
+.all-flush .yuzui,
+.yuzui.flush {
+  transform: translate3d(0, 0, 0);
 
-.all-flush :is(button, a, .button).yuzui:is(:active, .pressed, .loading) {
-  transform: translate3d(var(--shadow), var(--shadow), 0) !important;
-}
-
-.yuzui-row {
-  display: flex;
-}
-
-.yuzui-row > *:not(:last-child) {
-  margin-right: -1px;
-}
-
-.yuzui-row > :is(button, a, .button).yuzui ~ * {
-  z-index: 1;
-}
-
-.yuzui-row + .yuzui-row {
-  margin-top: -1px;
+  &:is(button, a, .button):active,
+  &:is(.pressed, .loading) {
+    transform: translate3d(var(--shadow), var(--shadow), 0);
+  }
 }
 
 .yuzui-column {
   display: flex;
   flex-direction: column;
-}
 
-.yuzui-column > *:not(:first-child) {
-  margin-top: -1px;
+  & > * {
+    &:not(:first-child) {
+      margin-top: -1px;
+    }
+
+    flex-shrink: 0;
+  }
 }
 
 .yuzui-column:has(:is(button, a, .button).yuzui) ~ * {
@@ -150,12 +115,26 @@
 .yuzui.yuzui-column:has(> .yuzui) {
   overflow-y: auto;
   overflow-x: hidden;
+  padding-right: var(--shadow);
+  margin-right: calc(-1 * var(--shadow));
+  padding-bottom: var(--shadow);
+  margin-bottom: calc(-1 * var(--shadow));
   border: 0 !important;
+  box-shadow: none !important;
   background-color: transparent !important;
 }
 
+.yuzui.yuzui-column .yuzui {
+  transform: translate3d(0, 0, 0) !important;
+}
+
+.yuzui.yuzui-column
+  :is(button, a, .button).yuzui:is(:active, .pressed, .loading) {
+  transform: translate3d(var(--shadow), var(--shadow), 0) !important;
+}
+
 .yuzui + .yuzui.yuzui-column > :first-child {
-  border-top: 0;
+  margin-top: -1px;
 }
 
 .yuzui.yuzui-column:has(+ .yuzui) > :last-child {
@@ -164,6 +143,22 @@
 
 .yuzui-row:has(:is(button, a, .button).yuzui) ~ * {
   z-index: 1;
+}
+
+.yuzui-row {
+  display: flex;
+
+  & > *:not(:last-child) {
+    margin-right: -1px;
+  }
+
+  & > :is(button, a, .button).yuzui ~ * {
+    z-index: 1;
+  }
+
+  & + .yuzui-row {
+    margin-top: -1px;
+  }
 }
 
 @keyframes spin {
