--- a/src/panels.css
+++ b/src/panels.css
@@ -30,7 +30,8 @@
 
 :is(button, a, .button).yuzui {
   -webkit-touch-callout: none;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  touch-action: manipulation;
   appearance: none;
 
   position: relative;
@@ -130,6 +131,7 @@
 .yuzui.yuzui-column::after {
   content: "";
   border-top: 1px solid var(--panel);
+  margin-top: -1px;
   background-color: var(--background-color, transparent);
   flex-grow: 1;
   width: 100%;
