--- a/src/panels.css
+++ b/src/panels.css
@@ -33,12 +33,8 @@
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   touch-action: manipulation;
   appearance: none;
-
   position: relative;
 
-  -webkit-transition-property: box-shadow, transform;
-  -webkit-transition-timing-function: linear;
-  -webkit-transition-duration: 75ms;
   transition-property: box-shadow, transform;
   transition-timing-function: linear;
   transition-duration: 75ms;
@@ -67,6 +63,10 @@
     cursor: not-allowed;
   }
 
+  &::after {
+    content: "";
+  }
+
   &.loading::after {
     position: absolute;
     right: 6px;
@@ -77,7 +77,25 @@
     border-top-color: transparent;
     height: 12px;
     width: 12px;
-    content: "";
+  }
+
+  &:empty {
+    padding: 6px 7px;
+  }
+
+  &:not(.loading):empty::after {
+    height: 15.5px;
+    width: 15px;
+    border-left: 16px solid currentColor;
+    border-bottom: 8px solid transparent;
+    border-top: 8px solid transparent;
+    border-right: none;
+    box-sizing: border-box;
+  }
+
+  &.loading:empty::after {
+    position: relative;
+    right: auto;
   }
 }
 
