--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -3,10 +3,12 @@
   --background-color: hsl(var(--yuzui-light));
 }
 
+.yuzui-tooltip-trigger:hover [data-tooltip],
 [data-tooltip]:hover {
   position: relative;
 }
 
+.yuzui-tooltip-trigger:hover [data-tooltip]::before,
 [data-tooltip]:hover::before {
   text-decoration: none;
   background: var(--text-color, black);
@@ -24,6 +26,7 @@
   padding: 8px 6px;
 }
 
+.yuzui-tooltip-trigger:hover [data-tooltip]::after,
 [data-tooltip]:hover::after {
   pointer-events: none;
   position: absolute;
@@ -32,6 +35,8 @@
   color: var(--text-color, black);
 }
 
+.yuzui-tooltip-trigger:hover [data-tooltip]::before,
+.yuzui-tooltip-trigger:hover .top[data-tooltip]::before,
 [data-tooltip]:hover::before,
 .top[data-tooltip]:hover::before {
   top: -12px;
@@ -40,6 +45,8 @@
   animation: tooltip-fade-in 0.2s cubic-bezier(0.4, 0, 0.2, 1) both;
 }
 
+.yuzui-tooltip-trigger:hover [data-tooltip]::after,
+.yuzui-tooltip-trigger:hover .top[data-tooltip]::after,
 [data-tooltip]:hover::after,
 .top[data-tooltip]:hover::after {
   top: -5px;
@@ -56,6 +63,7 @@
   box-sizing: border-box;
 }
 
+.yuzui-tooltip-trigger:hover .bottom[data-tooltip]::before,
 .bottom[data-tooltip]:hover::before {
   bottom: -12px;
   left: 50%;
@@ -63,6 +71,7 @@
   animation: tooltip-fade-in-down 0.2s cubic-bezier(0.4, 0, 0.2, 1) both;
 }
 
+.yuzui-tooltip-trigger:hover .bottom[data-tooltip]::after,
 .bottom[data-tooltip]:hover::after {
   bottom: -5px;
   left: 50%;
@@ -78,12 +87,14 @@
   box-sizing: border-box;
 }
 
+.yuzui-tooltip-trigger:hover .left[data-tooltip]::before,
 .left[data-tooltip]:hover::before {
   left: -12px;
   top: 50%;
   animation: tooltip-fade-in-left 0.2s cubic-bezier(0.4, 0, 0.2, 1) both;
 }
 
+.yuzui-tooltip-trigger:hover .left[data-tooltip]::after,
 .left[data-tooltip]:hover::after {
   left: -4px;
   top: 50%;
@@ -98,6 +109,7 @@
   box-sizing: border-box;
 }
 
+.yuzui-tooltip-trigger:hover .right[data-tooltip]::before,
 .right[data-tooltip]:hover::before {
   right: -12px;
   left: auto;
@@ -105,6 +117,7 @@
   animation: tooltip-fade-in-right 0.2s cubic-bezier(0.4, 0, 0.2, 1) both;
 }
 
+.yuzui-tooltip-trigger:hover .after[data-tooltip]::before,
 .right[data-tooltip]:hover::after {
   right: -4px;
   left: auto;
