--- a/src/panels.css
+++ b/src/panels.css
@@ -51,7 +51,7 @@
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
-    padding: 6px 32px;
+    padding: 6px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -67,9 +67,18 @@
     content: "";
   }
 
+  &.loading::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--background-color, transparent);
+    content: "";
+  }
+
   &.loading::after {
     position: absolute;
-    right: 6px;
     animation: spin 1s linear infinite;
     display: inline-block;
     border-radius: 100%;
@@ -77,6 +86,18 @@
     border-top-color: transparent;
     height: 12px;
     width: 12px;
+  }
+
+  &.loading.fixed-right {
+    padding: 6px 32px;
+
+    &::before {
+      display: none;
+    }
+
+    &::after {
+      right: 6px;
+    }
   }
 
   &:empty {
